# zfs_sync

./: .bandit  .dockerignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  HOW_TO_USE.md  Makefile  PROJECT_SETUP_GUIDE.md  QUICK_START.md  README.md  STATUS.md  _config.yml  docker-compose.prod.yml  docker-compose.yml  log.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh  test_phase2.py  test_phase3_snapshots.py  test_setup.py  zfs_sync_monitor_design.md
.github/: agent-instructions.md
.github/workflows/: ci.yml
alembic/versions/: 001_add_ssh_fields_to_systems.py  002_add_description_to_sync_groups.py  002_add_directional_sync_fields.py  003_change_sync_states_to_per_dataset.py
config/: zfs_sync.yaml  zfs_sync.yaml.example
docker/: README.md  logrotate.conf
docs/: DASHBOARD_GUIDE.md  DASHBOARD_IMPLEMENTATION_PLAN.md  DATABASE_SCHEMA_UPDATE.md  GITHUB_PAGES_SETUP.md  IMPROVEMENTS_ROADMAP.md  MISMATCH_FILTERING_ANALYSIS.md  OPERATIONS_GUIDE.md  SETUP_GUIDE.md  SSH_SETUP.md  SYNC_MISMATCH_BUG_ANALYSIS.md  TROUBLESHOOTING_GUIDE.md  fix_sync_states_schema.sql  index.md
docs/templates/: sync_executor.sh  system_ssh_config.yaml  zfs_sync_client.sh  zfs_sync_report.sh
scripts/: increment_version.py  test_snapshot_comparison.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py
zfs_sync/: __init__.py  __main__.py  logging_config.py
zfs_sync/api/: __init__.py  app.py
zfs_sync/config/: __init__.py  settings.py  validation.py
zfs_sync/database/: __init__.py  base.py  engine.py  models.py
zfs_sync/models/: __init__.py  snapshot.py  sync_group.py  sync_state.py  system.py
zfs_sync/services/: __init__.py  auth.py  conflict_resolution.py  snapshot_comparison.py  snapshot_history.py  ssh_command_generator.py  (+5 more)
(+40 files in other folders)
